--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,6 +29,9 @@ jobs:
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick
           coverage: xdebug
 
+      - name: Copy .env file
+        run: php -r "file_exists('.env.testing.github') || copy('.env.testing.github', '.env.testing');"
+
       - name: Setup Memcached
         uses: niden/actions-memcached@v7
 
