--- a/.env.testing.github
+++ b/.env.testing.github
@@ -2,13 +2,14 @@ APP_NAME="KA-Huis"
 APP_ENV=testing
 APP_KEY=base64:p8lPFTEgvQ+FcmW0jetdW/9MIwnigmiJUjxJe1eiebs=
 APP_DEBUG=true
-APP_URL=https://space-management.test
+APP_URL=https://space-management.localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=sm_test
 DB_USERNAME=sm
