--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,13 +4,31 @@ on: [push]
 
 jobs:
   tests:
+    name: P${{ matrix.php }}
     runs-on: ubuntu-latest
+
     strategy:
       fail-fast: false
       matrix:
         php: [7.4]
 
-    name: P${{ matrix.php }}
+    services:
+      mariadb:
+        image: mariadb:10.4
+        env:
+          MYSQL_DATABASE: sm
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_USER: sm
+          MYSQL_PASSWORD: sm
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
+      redis:
+        image: redis
+        ports:
+          - 6379/tcp
+        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - name: Checkout code
@@ -37,15 +55,6 @@ jobs:
 
       - name: Shutdown Ubuntu MySQL (SUDO)
         run: sudo service mysql stop # Shutdown the Default MySQL, "sudo" is necessary, please not remove it
-
-      - name: Setup MariaDB database
-        uses: getong/mariadb-action@v1.1
-        with:
-          mariadb version: "10.4"
-          mysql database: "sm_test"
-          mysql root password: "sm"
-          mysql user: "sm"
-          mysql password: "sm"
 
       - name: Install dependencies
         run: |
