chore: attempt to fix github action

--- a/.env.testing
+++ b/.env.testing
@@ -2,7 +2,7 @@ APP_NAME="KA-Huis"
 APP_ENV=testing
 APP_KEY=base64:p8lPFTEgvQ+FcmW0jetdW/9MIwnigmiJUjxJe1eiebs=
 APP_DEBUG=true
-APP_URL=https://space-management.test
+APP_URL=https://space-management.localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
