--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="KA-Huis"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://space-management.test
+APP_URL=https://space-management.localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
