--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Prepare .env.testing file
-        run: php -r "file_exists('.env.testing.github') || copy('.env.testing.github', '.env.testing');"
+        run: php -r "file_exists('.env.testing.github') && copy('.env.testing.github', '.env.testing');"
 
       - name: Cache dependencies
         uses: actions/cache@v1
