--- a/.env.testing.github
+++ b/.env.testing.github
@@ -8,16 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=mariadb
-DB_DATABASE=/database/database.sqlite
-
-#DB_CONNECTION=mysql
-#DB_HOST=mariadb
-#DB_PORT=3306
-#DB_DATABASE=sm_test
-#DB_USERNAME=sm
-#DB_PASSWORD=sm
+DB_PORT=3306
+DB_DATABASE=sm_test
+DB_USERNAME=sm
+DB_PASSWORD=sm
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
