--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "@inertiajs/inertia": "^0.10.1",
         "@inertiajs/inertia-vue3": "^0.5.2",
         "@inertiajs/progress": "^0.2.6",
+        "autoprefixer": "^10.4.0",
+        "postcss-import": "^14.0.2",
         "vue": "^3.2.22"
     }
 }
