chore: attempt to fix run-tests workflow

--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,4 @@
-APP_NAME="KA-Huis"
+APP_NAME="KA-Huis Testing"
 APP_ENV=testing
 APP_KEY=base64:p8lPFTEgvQ+FcmW0jetdW/9MIwnigmiJUjxJe1eiebs=
 APP_DEBUG=true
