--- a/.env.testing.github
+++ b/.env.testing.github
@@ -1,4 +1,4 @@
-APP_NAME="KA-Huis"
+APP_NAME="KA-Huis Testing GitHub"
 APP_ENV=testing
 APP_KEY=base64:p8lPFTEgvQ+FcmW0jetdW/9MIwnigmiJUjxJe1eiebs=
 APP_DEBUG=true
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-DB_DATABASE=/database/database.sqlite
+DB_DATABASE=:memory:
 
 #DB_CONNECTION=mysql
 #DB_HOST=mariadb
