--- a/.env.testing.github
+++ b/.env.testing.github
@@ -19,10 +19,10 @@ DB_DATABASE=:memory:
 #DB_PASSWORD=sm
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+CACHE_DRIVER=array
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=redis
-SESSION_DRIVER=redis
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=array
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
@@ -31,7 +31,7 @@ REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
+MAIL_MAILER=array
 MAIL_HOST=mailhog
 MAIL_PORT=1025
 MAIL_USERNAME=null
