--- a/.env.testing.github
+++ b/.env.testing.github
@@ -8,8 +8,8 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_DATABASE=:memory:
+#DB_CONNECTION=sqlite
+#DB_DATABASE=:memory:
 
 #DB_CONNECTION=mysql
 #DB_HOST=mariadb
@@ -27,9 +27,9 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=redis
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+#REDIS_HOST=redis
+#REDIS_PASSWORD=null
+#REDIS_PORT=6379
 
 MAIL_MAILER=array
 MAIL_HOST=mailhog
