--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,21 @@
 /node_modules
+
+/storage/*.key
+/storage
+
+/public/css
+/public/js
 /public/hot
 /public/storage
-/storage/*.key
+
 /vendor
 .env
 .env.backup
 .phpunit.result.cache
 docker-compose.override.yml
-Homestead.json
-Homestead.yaml
 npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+
+/resources/js/ziggy.js
