--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ DB_PASSWORD=sm
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
