--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.5",
         "laravel/framework": "^9.0",
-        "laravel/sanctum": "^2.11",
+        "laravel/passport": "^10.4",
         "laravel/tinker": "^2.5",
         "spatie/laravel-permission": "^5.3",
         "tightenco/ziggy": "^1.4"
