--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "spatie/laravel-json-api-paginate": "^1.11",
         "spatie/laravel-permission": "^5.3",
+        "spatie/laravel-query-builder": "^5.0",
         "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
