--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "spatie/laravel-json-api-paginate": "^1.11",
         "spatie/laravel-permission": "^5.3",
         "spatie/laravel-query-builder": "^5.0",
-        "tightenco/ziggy": "^1.4"
+        "tightenco/ziggy": "^1.4",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^1.0",
