--- a/.env.testing
+++ b/.env.testing
@@ -2,24 +2,24 @@ APP_NAME="KA-Huis Testing"
 APP_ENV=testing
 APP_KEY=base64:p8lPFTEgvQ+FcmW0jetdW/9MIwnigmiJUjxJe1eiebs=
 APP_DEBUG=true
-APP_URL=https://space-management.localhost
+APP_URL=http://space-management.test/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mariadb
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sm_test
-DB_USERNAME=sm
-DB_PASSWORD=sm
+DB_DATABASE=spacemangement_dev
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+CACHE_DRIVER=database
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=redis
-SESSION_DRIVER=redis
+QUEUE_CONNECTION=database
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
