--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-pdo": "*",
+        "doctrine/dbal": "^3.3",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.5",
         "laravel/framework": "^9.0",
@@ -13,8 +15,7 @@
         "spatie/laravel-json-api-paginate": "^1.11",
         "spatie/laravel-permission": "^5.3",
         "spatie/laravel-query-builder": "^5.0",
-        "tightenco/ziggy": "^1.4",
-        "ext-pdo": "*"
+        "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^1.0",
@@ -50,6 +51,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "csfix-php": [
+            "./vendor/bin/php-cs-fixer fix --allow-risky=yes"
         ]
     },
     "extra": {
