--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Setup Laravel Passport
         run: |
-          php artisan passport:install
+          php artisan passport:install --env=testing
 
       - name: Execute tests
         run: vendor/bin/phpunit --verbose
