--- a/.env.testing.github
+++ b/.env.testing.github
@@ -8,6 +8,10 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+DB_CONNECTION=mysql
+DB_DATABASE=default
+DB_USERNAME=root
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
 FILESYSTEM_DRIVER=local
