--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -53,13 +53,9 @@ jobs:
         run: |
           composer install --prefer-dist --no-interaction --no-progress
 
-      - name: Setup Laravel Passport
+      - name: Create Laravel Passport OAuth keys
         run: |
-          php artisan passport:install --env=testing
-        env:
-          DB_CONNECTION: mysql
-          DB_USERNAME: root
-          DB_DATABASE: default
+          php artisan passport:keys
 
       - name: Execute tests
         run: vendor/bin/phpunit --verbose
