--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@vue/compiler-sfc": "^3.2.22",
+        "@babel/preset-react": "^7.17.12",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vue-loader": "^16.2.0"
+        "postcss": "^8.1.14"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.10.1",
-        "@inertiajs/inertia-vue3": "^0.5.2",
+        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia-react": "^0.8.0",
         "@inertiajs/progress": "^0.2.6",
         "autoprefixer": "^10.4.0",
         "postcss-import": "^14.0.2",
-        "vue": "^3.2.22"
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "react-router-dom": "^6.3.0"
     }
 }
